--- a/BookManager/Views/Book/BookList.cshtml
+++ b/BookManager/Views/Book/BookList.cshtml
@@ -1,52 +1,36 @@
 ﻿@model IEnumerable<BookManager.Context.Book>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add Book", "Index")
 </p>
+
+
+
 <table class="table table-hover">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Author)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PublishedDate)
-        </th><th>Actions</th>
-       
+        <th>@Html.DisplayNameFor(model => model.Title)</th>
+        <th>@Html.DisplayNameFor(model => model.Author)</th>
+        <th>@Html.DisplayNameFor(model => model.Price)</th>
+        <th>@Html.DisplayNameFor(model => model.PublishedDate)</th>
+        <th>Actions</th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Author)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PublishedDate)
-        </td>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@Html.DisplayFor(modelItem => item.Title)</td>
+            <td>@Html.DisplayFor(modelItem => item.Author)</td>
+            <td>@Html.DisplayFor(modelItem => item.Price)</td>
+            <td>@(item.PublishedDate?.ToString("yyyy-MM-dd"))</td>
 
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-
-
-        </td>*@
-        <td>
-            <a href="@Url.Action("Index",new {item.ID,item.Title,item.Author,item.Price,item.PublishedDate})" class="btn btn-success">Edit</a>
-            <a href="@Url.Action("Delete",new {item.ID})" class="btn btn-danger">Delete</a>
-        </td>
-    </tr>
-}
-
+            <td>
+                <a href="@Url.Action("Index", new { item.ID, item.Title, item.Author, item.Price, item.PublishedDate })" class="btn btn-success">Edit</a>
+                <a href="@Url.Action("Delete", new { item.ID })"
+                   class="btn btn-danger"
+                   onclick="return confirm('Are you sure you want to delete this book?');">
+                    Delete
+                </a>
+            </td>
+        </tr>
+    }
 </table>
