Price Range validation Added

--- a/BookManager/Views/Book/BookList.cshtml
+++ b/BookManager/Views/Book/BookList.cshtml
@@ -1,8 +1,9 @@
 ﻿@model IEnumerable<BookManager.Context.Book>
 
 <p>
-    @Html.ActionLink("Add Book", "Index")
+    @Html.ActionLink("Add Book", "Index", null, new { @class = "btn btn-primary mb-3" })
 </p>
+
 
 
 
