--- a/BookManager/Views/Book/Index.cshtml
+++ b/BookManager/Views/Book/Index.cshtml
@@ -11,7 +11,7 @@
     }
 </style>
 
-<h2>Add/Edit Book</h2> 
+<h3>Add/Edit Book</h3> 
 
 @if (TempData["SuccessMessage"] != null)
 {
@@ -26,9 +26,11 @@
 
     <div class="container">
 
+
+
         @* Title Field *@
         <div class="form-group">
-            @Html.HiddenFor(model => model.ID);
+            @Html.HiddenFor(model => model.ID)
             <label>Title</label>
             @Html.ValidationMessageFor(model => model.Title, "", new { @class = "error" })
             @Html.TextBoxFor(model => model.Title, new { @class = "form-control" })
@@ -39,25 +41,37 @@
         @* Author Field *@
         <div class="form-group">
             <label>Author</label>
-            @Html.TextBoxFor(model => model.Author, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Author, "", new { @class = "error" })
+            @Html.TextBoxFor(model => model.Author, new { @class = "form-control" })
+
         </div>
+
+
 
         @* Price Field *@
         <div class="form-group">
             <label>Price</label>
-            @Html.TextBoxFor(model => model.Price, new { @class = "form-control", type = "number", step = "0.01" })
             @Html.ValidationMessageFor(model => model.Price, "", new { @class = "error" })
+            @Html.TextBoxFor(model => model.Price, new { @class = "form-control", type = "number", step = "0.01" })
+
         </div>
+
+
+
 
         @* Published Date Field *@
         <div class="form-group">
             <label>Published Date</label>
-            @Html.TextBoxFor(model => model.PublishedDate, new { @class = "form-control", type = "date" })
             @Html.ValidationMessageFor(model => model.PublishedDate, "", new { @class = "error" })
+            @Html.TextBoxFor(model => model.PublishedDate, new { @class = "form-control", type = "date" })
+
         </div>
+
+
 
         <button type="submit" class="btn btn-primary">Submit</button>
         <button type="submit" class="btn btn-primary">Clear</button>
+        <a href="@Url.Action("BookList", "Book")" class="btn btn-success">BookList</a>
+
     </div>
 }
