Layout view footer improvement

--- a/BookManager/Views/Shared/_Layout.cshtml
+++ b/BookManager/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Book Management System</p>
+            <p>&copy; Book Management System by Jaimin Mevada</p>
         </footer>
     </div>
 
