--- a/BookManager/Views/Book/BookList.cshtml
+++ b/BookManager/Views/Book/BookList.cshtml
@@ -25,7 +25,7 @@
             <td>@(item.PublishedDate?.ToString("yyyy-MM-dd"))</td>
 
             <td>
-                <a href="@Url.Action("Form", new { item.ID, item.Title, item.Author, item.Price, item.PublishedDate })" class="btn btn-success">Edit</a>
+                <a href="@Url.Action("Form", new { id = item.ID })" class="btn btn-success">Edit</a>
                 <a href="@Url.Action("Delete", new { item.ID })"
                    class="btn btn-danger"
                    onclick="return confirm('Are you sure you want to delete this book?');">
