Book Form Title Changed

--- a/BookManager/Views/Book/BookList.cshtml
+++ b/BookManager/Views/Book/BookList.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<BookManager.Context.Book>
 
-<p>
+<p class="mb-4">
     @Html.ActionLink("Add Book", "Form", null, new { @class = "btn btn-primary mb-3" })
 </p>
 
